<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/device_address_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_device_address"
        android:textIsSelectable="true"
        android:textSize="@dimen/small_text"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="@dimen/small_text"
        compat:layout_constraintLeft_toRightOf="@+id/device_address_tag"
        compat:layout_constraintRight_toRightOf="parent"
        compat:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/state_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_state"
        android:textIsSelectable="true"
        android:textSize="@dimen/small_text"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintTop_toBottomOf="@+id/device_address_tag"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:textIsSelectable="true"
        android:textSize="@dimen/small_text"
        compat:layout_constraintLeft_toRightOf="@+id/state_tag"
        compat:layout_constraintTop_toBottomOf="@+id/device_address_tag"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ProgressBar
        android:id="@+id/connection_state_bar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:visibility="gone"
        compat:layout_constraintBottom_toTopOf="parent"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toLeftOf="parent"
        compat:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Switch
        android:id="@+id/enable_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enableNotifications"
        android:textSize="@dimen/small_text"
        android:visibility="gone"
        compat:layout_constraintRight_toRightOf="parent"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintTop_toBottomOf="@+id/connection_state"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ScrollView
        android:id="@+id/hscrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        compat:layout_constraintBottom_toTopOf="@+id/summary_table"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toRightOf="parent"
        compat:layout_constraintTop_toBottomOf="@+id/enable_notifications"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.androidplot.xy.XYPlot
                android:id="@+id/bioimpedancePlot"
                title="Bioimpedance Data"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/data_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textIsSelectable="true"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textIsSelectable="true"
                android:textSize="@dimen/small_text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/begin"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/start"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        compat:layout_constraintBottom_toBottomOf="@+id/hscrollview"
        compat:layout_constraintLeft_toLeftOf="@+id/hscrollview"
        compat:layout_constraintTop_toBottomOf="@+id/hscrollview"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <View
        android:id="@+id/begin_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/dividerVertical"
        android:visibility="visible"
        compat:layout_constraintBottom_toTopOf="@+id/summary_table"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/parameter_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_summary"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:textStyle="bold"
        compat:layout_constraintBottom_toTopOf="@+id/summary_table"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TableLayout
        android:id="@+id/summary_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:stretchColumns="*"
        compat:layout_constraintBottom_toTopOf="@+id/export_to_text"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/sample_rate" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/start_freq" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/step_size" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/num_of_increments" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/sample_rate"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/start_freq"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/step_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/num_of_increments"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/not_applicable" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/export_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/exportToText"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        compat:layout_constraintBottom_toBottomOf="parent"
        compat:layout_constraintHorizontal_chainStyle="spread_inside"
        compat:layout_constraintLeft_toLeftOf="parent"
        compat:layout_constraintRight_toLeftOf="@+id/clear_text_file" />

    <Button
        android:id="@+id/clear_text_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/clearTextFile"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        compat:layout_constraintBottom_toBottomOf="parent"
        compat:layout_constraintLeft_toRightOf="@+id/export_to_text"
        compat:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>