<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <com.androidplot.xy.XYPlot
        android:id="@+id/activityPlot"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/parameter_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityPlot"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/parameter_summary"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/summary_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/parameter_summary"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/modelRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/re" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/ri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/rmse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/rsq" />
        </TableRow>

        <TableRow
            android:id="@+id/modelRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/ri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/rmse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/not_applicable" />

            <TextView
                android:id="@+id/rsq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/not_applicable" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/export_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="exportToText"
            android:text="@string/exportToText"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/clear_text_file"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="clearTextFile"
            android:text="@string/clearTextFile"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

</RelativeLayout>